// Jest Snapshot v1, https://vijs.io/docs/snapshot-testing

exports[`renderer/components/metrics/CommentsPill.tsx renders with 1 comment 1`] = `
<div>
  <div
    data-color-mode="light"
    data-dark-theme="dark"
    data-light-theme="light"
  >
    <div
      class="prc-src-BaseStyles-aopSS"
      data-portal-root="true"
    >
      <button
        aria-describedby="_r_ID_"
        type="button"
      >
        <span
          class="hover:bg-gitify-notification-pill-hover prc-Label-Label-qG-Zu"
          data-size="small"
          data-variant="secondary"
          tabindex="0"
        >
          <div
            class="prc-Stack-Stack-UQ9k6"
            data-align="center"
            data-direction="horizontal"
            data-gap="none"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <svg
              aria-hidden="true"
              class="octicon octicon-comment text-gitify-icon-muted"
              display="inline-block"
              fill="currentColor"
              focusable="false"
              height="12"
              overflow="visible"
              style="vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="12"
            >
              <path
                d="M1 2.75C1 1.784 1.784 1 2.75 1h10.5c.966 0 1.75.784 1.75 1.75v7.5A1.75 1.75 0 0 1 13.25 12H9.06l-2.573 2.573A1.458 1.458 0 0 1 4 13.543V12H2.75A1.75 1.75 0 0 1 1 10.25Zm1.75-.25a.25.25 0 0 0-.25.25v7.5c0 .138.112.25.25.25h2a.75.75 0 0 1 .75.75v2.19l2.72-2.72a.749.749 0 0 1 .53-.22h4.5a.25.25 0 0 0 .25-.25v-7.5a.25.25 0 0 0-.25-.25Z"
              />
            </svg>
            <span
              class="text-xxs px-1 prc-Text-Text-9mHv3"
            >
              1
            </span>
          </div>
        </span>
      </button>
      <span
        aria-hidden="true"
        class="prc-TooltipV2-Tooltip-tLeuB"
        data-direction="s"
        id="_r_ID_"
        popover="auto"
        role="tooltip"
      >
        1 comment
      </span>
    </div>
  </div>
</div>
`;

exports[`renderer/components/metrics/CommentsPill.tsx renders with multiple comments 1`] = `
<div>
  <div
    data-color-mode="light"
    data-dark-theme="dark"
    data-light-theme="light"
  >
    <div
      class="prc-src-BaseStyles-aopSS"
      data-portal-root="true"
    >
      <button
        aria-describedby="_r_ID_"
        type="button"
      >
        <span
          class="hover:bg-gitify-notification-pill-hover prc-Label-Label-qG-Zu"
          data-size="small"
          data-variant="secondary"
          tabindex="0"
        >
          <div
            class="prc-Stack-Stack-UQ9k6"
            data-align="center"
            data-direction="horizontal"
            data-gap="none"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <svg
              aria-hidden="true"
              class="octicon octicon-comment text-gitify-icon-muted"
              display="inline-block"
              fill="currentColor"
              focusable="false"
              height="12"
              overflow="visible"
              style="vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="12"
            >
              <path
                d="M1 2.75C1 1.784 1.784 1 2.75 1h10.5c.966 0 1.75.784 1.75 1.75v7.5A1.75 1.75 0 0 1 13.25 12H9.06l-2.573 2.573A1.458 1.458 0 0 1 4 13.543V12H2.75A1.75 1.75 0 0 1 1 10.25Zm1.75-.25a.25.25 0 0 0-.25.25v7.5c0 .138.112.25.25.25h2a.75.75 0 0 1 .75.75v2.19l2.72-2.72a.749.749 0 0 1 .53-.22h4.5a.25.25 0 0 0 .25-.25v-7.5a.25.25 0 0 0-.25-.25Z"
              />
            </svg>
            <span
              class="text-xxs px-1 prc-Text-Text-9mHv3"
            >
              2
            </span>
          </div>
        </span>
      </button>
      <span
        aria-hidden="true"
        class="prc-TooltipV2-Tooltip-tLeuB"
        data-direction="s"
        id="_r_ID_"
        popover="auto"
        role="tooltip"
      >
        2 comments
      </span>
    </div>
  </div>
</div>
`;

exports[`renderer/components/metrics/CommentsPill.tsx renders with no comments (null) 1`] = `
<div>
  <div
    data-color-mode="light"
    data-dark-theme="dark"
    data-light-theme="light"
  >
    <div
      class="prc-src-BaseStyles-aopSS"
      data-portal-root="true"
    />
  </div>
</div>
`;
